--- a/pmer_infosafe/第一篇：安全学习路线研究.md
+++ b/pmer_infosafe/第一篇：安全学习路线研究.md
@@ -26,13 +26,20 @@
 
 	1. 贯穿始终的重点：思路，网络安全是一个发现问题的过程，一定要重视思路，技术只能帮我们发现漏洞，如何利用，关键在于思路（当然，技术也很重要，只是要学习网络安全，一定要培养思路）
  	2. 基础：网络安全相关介绍（包括法律法规、风险及操守等，一般为正规授课学习，自学始，选择性查看，毕竟不需要考试），初级代码功底，不需要会写代码，但需要能够进行看懂，网络相关知识（广而杂，包括但不限于上面所想象的想着知识，需要长期坚持学习）
- 	3. 渗透：其中渗透即为网络安全的主要攻击方式，包括从信息收集到渗透实施多个过程，最后编写渗透测试报告（本系列主要进行渗透的学习）
- 	4. 代码审计：主要为检查源代码中的安全缺陷，检查程序源代码是否存在安全隐患等问题，最终针对目标代码提出修订措施和建议。
- 	5. 其后几点为等级评定等步骤，个人学习意义不大，这里不做过多表述
+  3. 代码审计：主要为检查源代码中的安全缺陷，检查程序源代码是否存在安全隐患等问题，最终针对目标代码提出修订措施和建议。
+     ​	
+
+     渗透：其中渗透即为网络安全的主要攻击方式，包括从信息收集到渗透实施多个过程，最后编写渗透测试报告（本系列主要进行渗透的学习）
+  4. 代码审计：主要为检查源代码中的安全缺陷，检查程序源代码是否存在安全隐患等问题，最终针对目标代码提出修订措施和建议。
+
+     ​	
+
+     渗透：其中渗透即为网络安全的主要攻击方式，包括从信息收集到渗透实施多个过程，最后编写渗透测试报告（本系列主要进行渗透的学习）
+ 	5. 
 
 ## 三、整理后的相关知识
 
-![qrcode_for_gh_062edb054ee4_258](../image/mind_WebSafe.png)
+![/](../image/mind_WebSafe.png)
 
 下一篇将会进行网络安全的介绍，之后将逐步进行各项技术的实践最终进行独立的安全项目解决。
 
